<resources>
    <string name="app_name">RemoTemperatureViewer</string>

    <string name="ok">OK！</string>
    <string name="start_text">いつからいつまでのデータを表示したいですか？</string>
    <string name="from_text">いつから？</string>
    <string name="date">日にち :</string>
    <string name="change">変更</string>
    <string name="time">じかん :</string>
    <string name="to_text">いつまで？</string>
    <string name="one_tap_setting">一発設定</string>
    <string name="last_24h">直近24時間！</string>
    <string name="last_1week">直近一週間！</string>
</resources>