<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.StartFragment">

    <TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/start_text"/>

    <TextView
        android:id="@+id/from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/start_text"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/from_text"/>

    <TextView
        android:id="@+id/from_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/from_text"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/from_date_parameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/from_date"
        app:layout_constraintRight_toLeftOf="@id/from_date_button"
        android:layout_marginEnd="50dp"
        android:textStyle="bold"
        android:background="@color/lightcyan"
        android:text="yyyy/MM/dd"
        android:textColor="@color/darkbrown"
        android:textSize="20sp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/from_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintBaseline_toBaselineOf="@id/from_date"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="50dp"
         />

    <TextView
        android:id="@+id/from_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/from_date"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@id/from_date"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/from_time_parameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/from_time"
        app:layout_constraintLeft_toLeftOf="@+id/from_date_parameter"
        android:textStyle="bold"
        android:background="@color/lightcyan"
        android:text="HH:mm"
        android:textColor="@color/darkbrown"
        android:textSize="20sp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/from_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintBaseline_toBaselineOf="@id/from_time"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="50dp"
        />

    <TextView
        android:id="@+id/to_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/from_time"
        android:layout_marginTop="70dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/to_text"/>


    <TextView
        android:id="@+id/to_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/to_text"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/from_date"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/to_date_parameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/to_date"
        app:layout_constraintLeft_toLeftOf="@+id/from_date_parameter"
        android:textStyle="bold"
        android:background="@color/lightcyan"
        android:text="yyyy/MM/dd"
        android:textColor="@color/darkbrown"
        android:textSize="20sp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/to_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintBaseline_toBaselineOf="@id/to_date"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="50dp"
        />

    <TextView
        android:id="@+id/to_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/to_date"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@id/from_date"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/to_time_parameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/to_time"
        app:layout_constraintLeft_toLeftOf="@+id/from_date_parameter"
        android:layout_marginEnd="50dp"
        android:textStyle="bold"
        android:background="@color/lightcyan"
        android:text="HH:mm"
        android:textColor="@color/darkbrown"
        android:textSize="20sp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/to_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change"
        app:layout_constraintBaseline_toBaselineOf="@id/to_time"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="50dp"
        />

    <TextView
        android:id="@+id/one_tap_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/to_time"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:text="@string/one_tap_setting"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one_day_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_24h"
        app:layout_constraintTop_toBottomOf="@id/one_tap_setting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one_week_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_1week"
        app:layout_constraintTop_toBottomOf="@id/one_day_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        />





    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Widget.AppCompat.Button.Colored"
        />

</androidx.constraintlayout.widget.ConstraintLayout>